bynkc/tests/fixtures/negative/120_state_initialiser_not_static/src/demo.bynk
context demo

agent Signal {
  key id: String

  store label: Cell[String] = self.id

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
